--- a/app/src/main/res/layout/fragment_sks_admin_edits_posts_pending.xml
+++ b/app/src/main/res/layout/fragment_sks_admin_edits_posts_pending.xml
@@ -125,6 +125,7 @@
                 android:fontFamily="@font/poppins"
                 android:paddingStart="8dp"
                 android:paddingTop="6dp"
+                android:inputType="none"
                 android:paddingEnd="8dp"
                 android:textSize="16sp"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -173,6 +174,8 @@
                 android:ems="10"
                 android:fontFamily="@font/poppins"
                 android:paddingStart="8dp"
+                android:inputType="none"
+
                 android:paddingTop="6dp"
                 android:paddingEnd="8dp"
                 android:textSize="12sp"
