--- a/app/src/main/res/layout/fragment_student_club.xml
+++ b/app/src/main/res/layout/fragment_student_club.xml
@@ -11,13 +11,14 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/sks_admin_clubs_fragment_rv"
         android:layout_width="0dp"
-        android:layout_height="600dp"
+        android:layout_height="0dp"
         android:layout_marginStart="32dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="32dp"
-        android:layout_marginBottom="30dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/sks_admin_clubs_fragment_search_bar" />
 
     <TextView
         android:id="@+id/textView9"
@@ -37,7 +38,7 @@
         android:layout_width="0dp"
         android:layout_height="26dp"
         android:layout_marginStart="32dp"
-        android:layout_marginTop="96dp"
+        android:layout_marginTop="92dp"
         android:layout_marginEnd="32dp"
         android:background="@drawable/normal_background"
         android:backgroundTint="#EBEBEB"
