--- a/app/src/main/res/layout/fragment_sks_admin_calendar.xml
+++ b/app/src/main/res/layout/fragment_sks_admin_calendar.xml
@@ -9,37 +9,30 @@
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/cancelBtn"
-        android:layout_width="50dp"
-        android:layout_height="48dp"
+        android:layout_width="36dp"
+        android:layout_height="36dp"
         android:layout_marginTop="16dp"
-        android:layout_marginEnd="12dp"
+        android:layout_marginEnd="32dp"
         android:background="@drawable/normal_background"
         android:drawableLeft="@drawable/cancel_button"
-        android:paddingLeft="14dp"
+        android:paddingLeft="7dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView22" />
 
-    <CalendarView
-        android:id="@+id/calendarView"
-        android:layout_width="274dp"
-        android:layout_height="294dp"
-        android:layout_marginTop="130dp"
-        android:background="@drawable/normal_background"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/sks_admin_calendar_fragment_recycler_view"
         android:layout_width="0dp"
-        android:layout_height="600dp"
+        android:layout_height="0dp"
         android:layout_marginStart="12dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="12dp"
-        android:layout_marginBottom="40dp"
-        tools:listitem="@layout/sks_admin_calendar_fragment_card_view"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/calendarButton"
+        tools:listitem="@layout/sks_admin_calendar_fragment_card_view" />
 
     <TextView
         android:id="@+id/textView23"
@@ -56,19 +49,18 @@
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/calendarButton"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="36dp"
         android:layout_marginStart="32dp"
-        android:layout_marginTop="23dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="70dp"
         android:background="@drawable/normal_background"
         android:drawableLeft="@drawable/home_page_acitvity_bottom_nav_calendar_icon"
         android:gravity="center"
         android:inputType="none"
         android:paddingLeft="12dp"
-        android:text="24/04/2024"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView23" />
+        app:layout_constraintTop_toBottomOf="@+id/textView22" />
 
     <androidx.appcompat.widget.SearchView
         android:id="@+id/searchBar"
@@ -87,6 +79,15 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="52dp"
         android:text="______________________________________________________"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+    <CalendarView
+        android:id="@+id/calendarView"
+        android:layout_width="300dp"
+        android:layout_height="300dp"
+        android:layout_marginTop="130dp"
+        android:background="@drawable/normal_background"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
