--- a/app/src/main/res/layout/fragment_club_manager_club.xml
+++ b/app/src/main/res/layout/fragment_club_manager_club.xml
@@ -119,12 +119,14 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/club_manager_clubs_fragment_recyclerview"
         android:layout_width="0dp"
-        android:layout_height="600dp"
-        android:layout_marginStart="32dp"
-        android:layout_marginEnd="32dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="12dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="12dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btn_technology" />
 
     <TextView
         android:id="@+id/textView9"
