--- a/app/src/main/res/layout/fragment_sks_admin_forms_approved_detail.xml
+++ b/app/src/main/res/layout/fragment_sks_admin_forms_approved_detail.xml
@@ -59,18 +59,19 @@
 
             <ImageView
                 android:id="@+id/sks_admin_forms_approved_photo"
-                android:layout_width="150dp"
-                android:layout_height="150dp"
+                android:layout_width="0dp"
+                android:layout_height="175dp"
                 android:layout_marginStart="32dp"
                 android:layout_marginTop="9dp"
                 android:layout_marginEnd="32dp"
-                android:background="@drawable/circular_background"
-                android:fontFamily="@font/poppins"
+                android:layout_marginBottom="25dp"
+                android:background="@drawable/normal_background"
                 android:clipToOutline="true"
-                android:drawableLeft="@drawable/request_approved_icon"
+                android:fontFamily="@font/poppins"
                 android:gravity="center"
                 android:scaleType="centerCrop"
                 android:textSize="12sp"
+                app:layout_constraintBottom_toTopOf="@+id/textView66"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textView25" />
