--- a/app/src/main/res/layout/fragment_sks_admin_profile.xml
+++ b/app/src/main/res/layout/fragment_sks_admin_profile.xml
@@ -74,7 +74,7 @@
         android:layout_width="120dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="32dp"
-        android:background="@null"
+        android:background="@drawable/circular_background"
         android:drawableRight="@drawable/logout_button_icon"
         android:paddingRight="10dp"
         android:text="Log Out"
