--- a/app/src/main/res/layout/fragment_sks_admin_club_info_detail.xml
+++ b/app/src/main/res/layout/fragment_sks_admin_club_info_detail.xml
@@ -125,8 +125,8 @@
 
     <TextView
         android:id="@+id/sks_admin_club_info_detail_location"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="150dp"
+        android:layout_height="30dp"
         android:layout_marginStart="32dp"
         android:layout_marginEnd="16dp"
         android:fontFamily="@font/poppins"
@@ -247,8 +247,8 @@
 
     <TextView
         android:id="@+id/sks_admin_club_info_detail_web_platform"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="150dp"
+        android:layout_height="30dp"
         android:layout_marginStart="32dp"
         android:layout_marginTop="4dp"
         android:layout_marginEnd="16dp"
