--- a/app/src/main/res/layout/fragment_club_manager_create_form_page.xml
+++ b/app/src/main/res/layout/fragment_club_manager_create_form_page.xml
@@ -124,6 +124,7 @@
                 android:autofillHints=""
                 android:background="@drawable/normal_background"
                 android:ems="10"
+                android:gravity="start"
                 android:fontFamily="@font/poppins"
                 android:inputType="textMultiLine"
                 android:paddingStart="8dp"
@@ -158,6 +159,7 @@
                 android:autofillHints=""
                 android:background="@drawable/normal_background"
                 android:ems="10"
+                android:gravity="start"
                 android:fontFamily="@font/poppins"
                 android:inputType="textMultiLine"
                 android:paddingStart="8dp"
@@ -192,6 +194,7 @@
                 android:background="@drawable/normal_background"
                 android:ems="10"
                 android:fontFamily="@font/poppins"
+                android:gravity="start"
                 android:inputType="textMultiLine"
                 android:paddingStart="8dp"
                 android:paddingEnd="8dp"
