--- a/app/src/main/res/layout/fragment_sks_admin_forms_approved_detail.xml
+++ b/app/src/main/res/layout/fragment_sks_admin_forms_approved_detail.xml
@@ -135,9 +135,10 @@
                 android:clickable="false"
                 android:ems="10"
                 android:fontFamily="@font/poppins"
+                android:gravity="start"
                 android:paddingStart="8dp"
-                android:paddingEnd="8dp"
                 android:paddingTop="6dp"
+                android:paddingEnd="8dp"
                 android:textSize="12sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
@@ -156,9 +157,10 @@
                 android:clickable="false"
                 android:ems="10"
                 android:fontFamily="@font/poppins"
+                android:gravity="start"
                 android:paddingStart="8dp"
-                android:paddingEnd="8dp"
                 android:paddingTop="6dp"
+                android:paddingEnd="8dp"
                 android:textSize="12sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -189,9 +191,10 @@
                 android:clickable="false"
                 android:ems="10"
                 android:fontFamily="@font/poppins"
+                android:gravity="start"
                 android:paddingStart="8dp"
-                android:paddingEnd="8dp"
                 android:paddingTop="6dp"
+                android:paddingEnd="8dp"
                 android:textSize="12sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -223,8 +226,8 @@
                 android:clickable="false"
                 android:ems="10"
                 android:fontFamily="@font/poppins"
-                android:paddingTop="8dp"
                 android:paddingStart="8dp"
+                android:paddingTop="8dp"
                 android:paddingEnd="8dp"
                 android:textSize="16sp"
                 app:layout_constraintEnd_toEndOf="parent"
