--- a/app/src/main/res/layout/fragment_sks_admin_forms_rejected_detail.xml
+++ b/app/src/main/res/layout/fragment_sks_admin_forms_rejected_detail.xml
@@ -133,6 +133,7 @@
                 android:clickable="false"
                 android:ems="10"
                 android:fontFamily="@font/poppins"
+                android:gravity="start"
                 android:paddingStart="8dp"
                 android:paddingEnd="8dp"
                 android:paddingTop="6dp"
@@ -154,6 +155,7 @@
                 android:clickable="false"
                 android:ems="10"
                 android:fontFamily="@font/poppins"
+                android:gravity="start"
                 android:paddingStart="8dp"
                 android:paddingEnd="8dp"
                 android:paddingTop="6dp"
@@ -188,6 +190,7 @@
                 android:ems="10"
                 android:fontFamily="@font/poppins"
                 android:paddingStart="8dp"
+                android:gravity="start"
                 android:paddingEnd="8dp"
                 android:paddingTop="6dp"
                 android:textSize="12sp"
