--- a/app/src/main/res/layout/fragment_sks_admin_forms_pending_detail.xml
+++ b/app/src/main/res/layout/fragment_sks_admin_forms_pending_detail.xml
@@ -130,6 +130,7 @@
                 android:autofillHints=""
                 android:background="@drawable/normal_background"
                 android:clickable="false"
+                android:gravity="start"
                 android:ems="10"
                 android:paddingStart="8dp"
                 android:paddingEnd="8dp"
@@ -151,6 +152,7 @@
                 android:paddingEnd="8dp"
                 android:paddingTop="6dp"
                 android:layout_marginEnd="32dp"
+                android:gravity="start"
                 android:autofillHints=""
                 android:background="@drawable/normal_background"
                 android:clickable="false"
@@ -185,6 +187,7 @@
                 android:paddingStart="8dp"
                 android:paddingEnd="8dp"
                 android:paddingTop="6dp"
+                android:gravity="start"
                 android:background="@drawable/normal_background"
                 android:clickable="false"
                 android:ems="10"
